XO_Project_UAT/Project--XOGrp--UAT/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Google_Doc_ID__c</fullName>
        <formula>Account.Google_Doc_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Google Doc ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Local_Sales_Market__c</fullName>
        <description>This field is designed to show the related account&apos;s Local Sales Market on the contact so that we can filter these contacts when we send them to Tout.</description>
        <formula>Account.Local_Sales_Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is the same as the Local Sales Market on the related account</inlineHelpText>
        <label>Account Local Sales Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Paid_Status__c</fullName>
        <description>This is to allow users to see the paid status of the account on the contact so that they can be treated differently when sending emails from Tout.</description>
        <formula>TEXT(Account.Account_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field imports the value of the Local Paid Status from the related account.</inlineHelpText>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Primary_Category__c</fullName>
        <description>This field is to show the related accounts Primary Category on contact so that we can sort contacts by this so they can be pushed to Tout.</description>
        <formula>Account.Primary_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is the same as the Primary Category on the related account</inlineHelpText>
        <label>Account Primary Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Email__c</fullName>
        <description>This seems like a duplicate of Alternate Email.  What is it used for?</description>
        <label>Additional Email (can this be deleted?)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Phone_Number__c</fullName>
        <description>Phase 1 National</description>
        <label>Additional Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Average_Page_Views__c</fullName>
        <description>The average number of pages a contact sees. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The average number of pages a contact sees. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Average Page Views Per Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDR_Test_Date__c</fullName>
        <inlineHelpText>Requested on SS-2756</inlineHelpText>
        <label>BDR Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broadcast_Links__c</fullName>
        <description>The number of clicks on published social messages. This is set automatically by HubSpot for each contact.</description>
        <inlineHelpText>The number of clicks on published social messages. This is set automatically by HubSpot for each contact.</inlineHelpText>
        <label>Broadcast Clicks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_matches_Account_owner__c</fullName>
        <formula>OwnerId =  Account.OwnerId</formula>
        <label>Contact Owner matches Account owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Sub_Source_deprecated__c</fullName>
        <label>Contact Sub Source(deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>Apple Brides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Bridal St Louis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Hills Bride</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borrowed &amp; Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bride Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bride Wants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Bride</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Weds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carats and Cakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Blitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concierge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eventective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EventSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expertise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freemium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Wedding Shoes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grey Likes Weddings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Here Comes the Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hitched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hubspot_Paid Advertising-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hubspot_Paid Advertising-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instagram</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DoNotBulkEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF-1412 - Deprecated because of SS-1050</description>
        <label>Do Not Bulk Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dttm_Created__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dttm Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duplicate_Contact_Check2__c</fullName>
        <formula>Account.Google_Doc_ID__c &amp; &apos;--&apos; &amp; FirstName &amp; &apos;--&apos; &amp; LastName &amp; &apos;--&apos; &amp; Phone &amp; &apos;--&apos; &amp; Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Contact Check2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Contact_Check__c</fullName>
        <description>Used to determine if a Contact is a duplicate record or not.  When changing the definition here, you must also modify the ContactDuplicateCheck trigger.</description>
        <formula>Account.Id &amp; &apos;--&apos; &amp; FirstName &amp; &apos;--&apos; &amp; LastName &amp; &apos;--&apos; &amp; Phone &amp; &apos;--&apos; &amp; Email</formula>
        <inlineHelpText>Used to determine if a Contact is a duplicate record or not.  When changing the definition here, you must also modify the ContactDuplicateCheck trigger.</inlineHelpText>
        <label>Duplicate Contact Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DynamicsContactID__c</fullName>
        <description>SF-1201</description>
        <externalId>true</externalId>
        <label>Dynamics Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dynamics_Lead_Source_Name__c</fullName>
        <description>The descriptive name of the lead source.  Used during import.</description>
        <label>Dynamics Lead Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out_Reason__c</fullName>
        <description>CSP-2502</description>
        <inlineHelpText>This field is synced with the Hubspot field &quot;Suppression Reason&quot; and can only be modified by the Hubspot sync.</inlineHelpText>
        <label>Email Opt Out Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Bad Email Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Bounced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spam Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubscribed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified: Undeliverable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emails_Bounced__c</fullName>
        <description>The number of emails a contact has received. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The number of emails a contact has received. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Emails Bounced</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_Clicked__c</fullName>
        <description>The number of Marketing emails a contact has clicked, automatically set by HubSpot for each contact. This does not include emails sent or tracked in the CRM.</description>
        <inlineHelpText>The number of Marketing emails a contact has clicked, automatically set by HubSpot for each contact. This does not include emails sent or tracked in the CRM.</inlineHelpText>
        <label>Emails Clicked</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_Delivered__c</fullName>
        <description>The number of emails a contact has received. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The number of emails a contact has received. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Emails Delivered</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_Opened__c</fullName>
        <description>The number of Marketing emails a contact has opened, automatically set by HubSpot for each contact. This does not include emails sent or tracked in the CRM.</description>
        <inlineHelpText>The number of Marketing emails a contact has opened, automatically set by HubSpot for each contact. This does not include emails sent or tracked in the CRM.</inlineHelpText>
        <label>Emails Opened</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Attended__c</fullName>
        <description>Description When the contact has attended an event</description>
        <inlineHelpText>Description When the contact has attended an event</inlineHelpText>
        <label>Last Attended Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_RSVP__c</fullName>
        <description>Description of the event that is rsvp&apos;ed</description>
        <inlineHelpText>Description of the event that is rsvp&apos;ed</inlineHelpText>
        <label>Last Registered Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Clicks__c</fullName>
        <description>The number clicks on links shared on Facebook</description>
        <inlineHelpText>The number clicks on links shared on Facebook</inlineHelpText>
        <label>Facebook Clicks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Clicked_Date__c</fullName>
        <description>The date of the first click from any Marketing email to this contact. This does not include emails sent or tracked in the CRM.</description>
        <inlineHelpText>The date of the first click from any Marketing email to this contact. This does not include emails sent or tracked in the CRM.</inlineHelpText>
        <label>First Email Clicked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Open_Date__c</fullName>
        <description>The date of the first open from any Marketing email to this contact. This does not include emails sent or tracked in the CRM.</description>
        <inlineHelpText>The date of the first open from any Marketing email to this contact. This does not include emails sent or tracked in the CRM.</inlineHelpText>
        <label>First Email Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Referrer__c</fullName>
        <description>The first website that referred a contact to your website. This is automatically set by HubSpot for each contact.</description>
        <label>First Referrer</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Send_Date__c</fullName>
        <description>The date of the first email sent to this contact.</description>
        <inlineHelpText>The date of the first email sent to this contact.</inlineHelpText>
        <label>First Email Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Timestamp__c</fullName>
        <description>The first time a contact has been seen. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The first time a contact has been seen. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>First Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Visit_Timestamp__c</fullName>
        <description>The first time a contact visited your website. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The first time a contact visited your website. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>First Visit Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Google_Plus_Clicks__c</fullName>
        <description>The number clicks on links shared on Google Plus</description>
        <inlineHelpText>The number clicks on links shared on Google Plus</inlineHelpText>
        <label>Google Plus Clicks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Temperature__c</fullName>
        <description>This will gives us the information about the temperature in a hubspot record.</description>
        <label>HubSpot Temperature</label>
        <picklist>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Hot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hubspot_Score__c</fullName>
        <description>This field will update the Hubspot score on a record.</description>
        <label>Hubspot Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Import_Set__c</fullName>
        <formula>Account.Import_Set__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import Set</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Klout_Score__c</fullName>
        <description>A contact&apos;s Klout score, a measure of Internet influeence</description>
        <inlineHelpText>A contact&apos;s Klout score, a measure of Internet influeence</inlineHelpText>
        <label>Klout Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Clicked_Date__c</fullName>
        <description>The date of the most recent click from any Marketing email to this contact. This does not include emails sent or tracked in the CRM.</description>
        <inlineHelpText>The date of the most recent click from any Marketing email to this contact. This does not include emails sent or tracked in the CRM.</inlineHelpText>
        <label>Last Email Clicked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Contacted__c</fullName>
        <label>Last Contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Email_Name__c</fullName>
        <description>The name of the last Marketing email sent to this contact. This does not include emails sent or tracked in the CRM.</description>
        <inlineHelpText>The name of the last Marketing email sent to this contact. This does not include emails sent or tracked in the CRM.</inlineHelpText>
        <label>Last Email Sent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Open_Date__c</fullName>
        <description>The date of the most recent open from any Marketing email to this contact. This does not include emails sent or tracked in the CRM.</description>
        <inlineHelpText>The date of the most recent open from any Marketing email to this contact. This does not include emails sent or tracked in the CRM.</inlineHelpText>
        <label>Last Email Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Referrer__c</fullName>
        <description>The last website that referred a contact to your website. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The last website that referred a contact to your website. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Last Referrer</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Registered_Event_Date__c</fullName>
        <description>SS-3608 Need this Date data point to start a heavy-lift project.</description>
        <label>Last Registered Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Salesforce_Sync_Time__c</fullName>
        <description>CSP-3141: Represents the last time that information on the contact was synced with Hubspot so that I can identify the &quot;master&quot; contact syncing to Hubspot</description>
        <inlineHelpText>Last time that information on the contact was synced with Hubspot so that I can identify the &quot;master&quot; contact syncing to Hubspot</inlineHelpText>
        <label>Last Salesforce Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Send_Date__c</fullName>
        <description>The date of the last email sent to this contact.</description>
        <inlineHelpText>The date of the last email sent to this contact.</inlineHelpText>
        <label>Last Email Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Social_Engagement_Date__c</fullName>
        <description>The date of the most recent click on a published social message. This is set automatically by HubSpot for each contact.</description>
        <inlineHelpText>The date of the most recent click on a published social message. This is set automatically by HubSpot for each contact.</inlineHelpText>
        <label>Last Social Engagement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Timestamp__c</fullName>
        <description>The last time and date a contact has viewed a page on your website.</description>
        <inlineHelpText>The last time and date a contact has viewed a page on your website.</inlineHelpText>
        <label>Last Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Visit_Timestamp__c</fullName>
        <description>The last time and date a contact visited your website.</description>
        <inlineHelpText>The last time and date a contact visited your website.</inlineHelpText>
        <label>Last Visit Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Sub_Source__c</fullName>
        <globalPicklist>Lead_Sub_Source</globalPicklist>
        <label>Lead Sub Source</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Linkedin_Clicks__c</fullName>
        <description>The number clicks on links shared on LinkedIn</description>
        <inlineHelpText>The number clicks on links shared on LinkedIn</inlineHelpText>
        <label>Linkedin Clicks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Event_Completions__c</fullName>
        <description>The sum of all events a contact has experienced. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The sum of all events a contact has experienced. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Number Of Event Completions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Page_Views__c</fullName>
        <description>The sum of all pages a contact has seen on your website. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The sum of all pages a contact has seen on your website. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Number of Page Views</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Visits__c</fullName>
        <description>The sum of all visits a contact has made to your website. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The sum of all visits a contact has made to your website. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Number of Page Visits</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operative_Eligible__c</fullName>
        <formula>Account.Operative_Eligible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A Contact is Operative Eligible if it meets the following criteria: 
- The related Account is Operative Eligible</inlineHelpText>
        <label>Operative Eligible</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operative_ID__c</fullName>
        <externalId>true</externalId>
        <label>Operative ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferredcontactmethod__c</fullName>
        <label>Preferred contact method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone/Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <displayFormat>CONT-{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>A system-generated id that uniquely identifies the record</inlineHelpText>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Regional_Pooling_NVM_Identifier__c</fullName>
        <description>CSP-2867 Regional Pooling Beta Signifier</description>
        <formula>IF(Owner.Strategy_Specialist__c = &apos;005f100000IUmKd&apos;, TEXT(Owner.Regional_Pooling_NVM_Identifier__c), &apos;&apos;)</formula>
        <label>Regional Pooling NVM Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Phase 1</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Same_Address_as_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the address will update every time the Account address changes.  Be sure to uncheck this if you make a custom address, or it will be overwritten the next time the Account is changed.</inlineHelpText>
        <label>Same Address as Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Reason_Other__c</fullName>
        <label>Status Reason Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Company closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer with Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer on this Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Twitter_Bio__c</fullName>
        <description>The contact&apos;s Twitter bio. This is set by HubSpot using the contact&apos;s email address.</description>
        <inlineHelpText>The contact&apos;s Twitter bio. This is set by HubSpot using the contact&apos;s email address.</inlineHelpText>
        <label>Twitter Bio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Clicks__c</fullName>
        <description>The number of times a contact clicked on links you shared on Twitter through HubSpot. This is set automatically by HubSpot and can be used for segmentation.</description>
        <inlineHelpText>The number of times a contact clicked on links you shared on Twitter through HubSpot. This is set automatically by HubSpot and can be used for segmentation.</inlineHelpText>
        <label>Twitter Clicks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <description>The contact&apos;s Twitter handle. This is set by HubSpot using the contact&apos;s email address.</description>
        <inlineHelpText>The contact&apos;s Twitter handle. This is set by HubSpot using the contact&apos;s email address.</inlineHelpText>
        <label>Twitter Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Profile_Photo__c</fullName>
        <description>The contact&apos;s Twitter profile photo. This is set by HubSpot using the contact&apos;s email address.</description>
        <inlineHelpText>The contact&apos;s Twitter profile photo. This is set by HubSpot using the contact&apos;s email address.</inlineHelpText>
        <label>Twitter Profile Photo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Workflow_Home_Phone__c</fullName>
        <label>Workflow Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_count__c</fullName>
        <description>The number of times this record has been assigned via Distribution Engine</description>
        <inlineHelpText>The number of times this record has been assigned via Distribution Engine</inlineHelpText>
        <label>Distribution count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Is_distributed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is distributed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_reassigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is reassigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Last_distributed__c</fullName>
        <label>Date last distributed to user</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_reassigned__c</fullName>
        <label>Date last auto reassigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zqu__County__c</fullName>
        <label>County</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>